<resources>
    <string name="app_name">Card Inventory</string>

    <string name="str_button_scan">Scan</string>
    <string name="str_button_submit">Submit</string>
    <string name="str_button_manual">Manual</string>
    <string name="str_button_save">Save</string>
    <string name="str_button_purge">Purge</string>
    <string name="str_button_export">Export</string>
    <string name="str_button_help">Help</string>
    <string name="str_button_list">List</string>
    <string name="str_button_import">Import</string>

    <string name="hint_ID">Enter Item ID</string>
    <string name="hint_vendor">Enter Vendor ID</string>
    <string name="hint_loc">A1</string>
    <string name="hint_qty">Enter Quantity</string>
    <string name="dialog_id">Please enter the full id or the last 5 digits.</string>
    <string name="dialog_loc">Note: For seasonal items, label items as Y (Valentines) or Z (Christmas).</string>
    <string name="dialog_qty">Note: If 12 or over, please indicate quantity as 12.</string>
    <string name="label_ID">Item ID</string>
    <string name="label_vendor">Vendor ID</string>
    <string name="label_loc">Location</string>
    <string name="label_qty">Quantity</string>
    <string name="label_delete">Delete Item?</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_closed">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="sample_id">01234</string>
    <string name="sample_pos">A2</string>
    <string name="sample_qty">12</string>
    <string name="list_label_itemno">Item No.</string>
    <string name="list_label_position">Position</string>
    <string name="list_label_qty">Quantity</string>

    <string name="context_sort_title">Sort List by</string>
    <string-array
        name="context_list">
        <item>Quantity, ID</item>
        <item>Quantity</item>
        <item>Item Number</item>
        <item>Location</item>
    </string-array>
    <string name="progress_msg">Syncing in progress...</string>

    <!--Headers for Star Page Cards-->
    <string name="header1">Search &amp; Scan</string>
    <string name="header2">List Inventory</string>
    <string name="header3">Search by ID</string>
    <string name="header4">Search by Barcode</string>
    <string name="header5">Manually Add an Item</string>
    <string name="desc1">Search the inventory for saved items using the item\'s barcode or add new items.</string>
    <string name="desc2">View a list of saved items and sort items according to various categories.</string>
    <string name="desc3">Find item by ID using keyboard input.</string>
    <string name="desc4">Use the built-in barcode scanner to identify or add new items.</string>
    <string name="desc5">For special barcodes that cannot be added by the barcode scanner.</string>
</resources>
