<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:id="@+id/root_list_item">

    <TextView
        android:id="@+id/list_id"
        style="@style/ListItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="10"
        tools:text="@string/sample_id"/>
    <TextView
        android:id="@+id/list_loc"
        style="@style/ListItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="10"
        tools:text="@string/sample_pos"/>
    <TextView
        android:id="@+id/list_qty"
        style="@style/ListItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingRight="16sp"
        android:layout_weight="1"
        tools:text="@string/sample_qty"/>
</LinearLayout>
