<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gadau.sqldemo.view.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:layout_gravity="start">
            <ImageView
                android:id="@+id/button_cancel2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_navigate_before_white_24dp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <!--TEST 1: BASIC INPUT AND OUTPUT-->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/input_barcode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:inputType="phone"
            android:hint="Enter Barcode"
            app:layout_constraintLeft_toLeftOf="parent" />
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button_submit"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" />
        <Button
            android:id="@+id/barcode_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button_scan"
            app:layout_constraintLeft_toRightOf="@+id/submit_button"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" />
        <Button
            android:id="@+id/manual_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/str_button_manual"
            app:layout_constraintLeft_toRightOf="@+id/barcode_button"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" />
        <Button
            android:id="@+id/purge_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/str_button_purge"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/manual_button" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
