<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gadau.sqldemo.view.ListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_sort"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:layout_gravity="start">
            <ImageView
                android:id="@+id/button_cancel2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_navigate_before_white_24dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:layout_gravity="end">
            <ImageView
                android:id="@+id/button_options_list"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:onClick="showMenu"
                android:src="@drawable/ic_more_vert_white_24dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end">
            <ImageView
                android:id="@+id/button_sort"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_sort_white_24dp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/list_id"
            style="@style/ListStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_label_itemno"/>
        <TextView
            android:id="@+id/list_loc"
            style="@style/ListStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/list_label_position"/>
        <TextView
            android:id="@+id/list_qty"
            style="@style/ListStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            android:text="@string/list_label_qty"/>
    </LinearLayout>
    <View style="@style/LineDivider"/>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rec_list_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/fragment_list_item"
            />
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
